<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_edit"
    android:layout_width="200dp"
    android:layout_height="180dp"
    android:orientation="vertical" >

    <Button
        android:id="@+id/edit_newtab"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/selector_item"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/edit_newtab"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/edit_snewtab"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/selector_item"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/edit_snewtab"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/edit_edit"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/selector_item"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/edit_edit"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/edit_delete"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/selector_item"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/edit_delete"
        android:textColor="@color/black" />

</LinearLayout>